Prevent input group from wrapping

--- a/UI/Web/src/app/typeahead/typeahead.component.scss
+++ b/UI/Web/src/app/typeahead/typeahead.component.scss
@@ -2,6 +2,10 @@ form {
     position: relative;
 }
 
+.input-group {
+    flex-wrap: inherit;
+}
+
 input {
     width: 15px;
     opacity: 1px;
